--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>abhiramashok.me</title>
+    <title>abhi5455/Projects</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header" id="header">
         <h1>- PROJECTS</h1>
         <h3>abhi</h3>
         <svg xmlns="http://www.w3.org/2000/svg" id="sun" class="icon icon-tabler icon-tabler-sun" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
             <path d="M12 12m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" />
             <path d="M3 12h1m8 -9v1m8 8h1m-9 8v1m-6.4 -15.4l.7 .7m12.1 -.7l-.7 .7m0 11.4l.7 .7m-12.1 -.7l-.7 .7" />
+        </svg>
+        <svg xmlns="http://www.w3.org/2000/svg" id="moon" class="icon icon-tabler icon-tabler-moon" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+            <path d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z" />
         </svg>
         <svg xmlns="http://www.w3.org/2000/svg" id="home" class="icon icon-tabler icon-tabler-home" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -105,14 +109,5 @@
         </div>
     </div>
 </body>
-<script>
-    let body=document.body;
-    let lastCard=document.getElementById('lastCard');
-    window.addEventListener('load',setBody);
-    window.addEventListener('resize', setBody);
-    function setBody() {
-        let bodyHeight = lastCard.offsetTop + 510 + 150;
-        body.style.height = bodyHeight.toString() + 'px';
-    }
-</script>
+<script src="script.js"></script>
 </html>
