--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header" id="header">
-        <h1>- PROJECTS</h1>
+        <h1 id="project">- PROJECTS</h1>
         <h3>abhi</h3>
         <svg xmlns="http://www.w3.org/2000/svg" id="sun" class="icon icon-tabler icon-tabler-sun" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -26,7 +26,7 @@
             <path d="M9 21v-6a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v6" />
         </svg>
     </header>
-    <div class="mainDiv">
+    <div class="mainDiv" id="mainDiv">
         <div class="card">
             <div class="imgContainer">
                 <img alt="expense" src="expense.png" style=" height: 240px; width: 240px;">
