--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <header class="header" id="header">
         <h1 id="project">- PROJECTS</h1>
-        <h3>abhi</h3>
+        <a href="https://github.com/abhi5455">
+            <h3>abhi</h3>
+        </a>
         <svg xmlns="http://www.w3.org/2000/svg" id="sun" class="icon icon-tabler icon-tabler-sun" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
             <path d="M12 12m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" />
