--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <img alt="expense" src="expense.png" style=" height: 240px; width: 240px;">
             </div>
             <h2>Expense Tracker</h2>
-            <p>A comprehensive Expense tracker application that enables users to efficiently record, categorize, and monitor their financial transactions, fostering improved budgeting and financial management</p>
+            <p>A comprehensive Expense tracker application that enables users to efficiently record, categorize, and monitor their Expenses, fostering improved budgeting and financial management</p>
             <div class="icons">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="23" height="23" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
