--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>abhi5455/Projects</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Languages.css">
 </head>
 <body>
     <header class="header" id="header">
@@ -51,6 +52,36 @@
                     <path d="M8 4l-4 0l0 4" />
                     <path d="M4 4l6 6" />
                 </svg>
+                <a onclick="displayTools('ExpenseTracker')">
+                    <svg  xmlns="http://www.w3.org/2000/svg"  width="23"  height="23"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-help-hexagon"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M19.875 6.27c.7 .398 1.13 1.143 1.125 1.948v7.284c0 .809 -.443 1.555 -1.158 1.948l-6.75 4.27a2.269 2.269 0 0 1 -2.184 0l-6.75 -4.27a2.225 2.225 0 0 1 -1.158 -1.948v-7.285c0 -.809 .443 -1.554 1.158 -1.947l6.75 -3.98a2.33 2.33 0 0 1 2.25 0l6.75 3.98h-.033z" />
+                        <path d="M12 16v.01" />
+                        <path d="M12 13a2 2 0 0 0 .914 -3.782a1.98 1.98 0 0 0 -2.414 .483" />
+                    </svg>
+                </a>
+            </div>
+            <div class="languagesTools" id="ExpenseTracker">
+                <div class="imgContainer" style="position: relative; margin-top: 30px; margin-left: 60px; margin-right: 60px; height: 160px; display: flex; justify-content: center;user-select: none;">
+                    <img alt="expense" src="expense.png" style=" height: 150px; width: 150px;">
+                </div>
+                <h2>Expense Tracker</h2>
+                <h4>Languages & Tools :</h4>
+                <div class="allLangIcon">
+                    <div class="eachIconDiv">
+                        <img src="https://devicon-website.vercel.app/api/html5/original.svg" class="langIcon">
+                        <h5 class="langIconText">HTML</h5>
+                        </img>
+                    </div>
+                    <div class="eachIconDiv">
+                        <img src="https://devicon-website.vercel.app/api/css3/original.svg" class="langIcon">
+                        <h5 class="langIconText">CSS</h5>
+                        </img>
+                    </div>
+                    <div class="eachIconDiv">
+                        <img src="https://devicon-website.vercel.app/api/javascript/original.svg" class="langIcon">
+                        <h5 class="langIconText">JavaScript</h5>
+                        </img>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="card">
@@ -79,6 +110,36 @@
                         <path d="M4 4l6 6" />
                     </svg>
                 </a>
+                <a onclick="displayTools('UnitConverter')">
+                    <svg  xmlns="http://www.w3.org/2000/svg"  width="23"  height="23"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-help-hexagon"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M19.875 6.27c.7 .398 1.13 1.143 1.125 1.948v7.284c0 .809 -.443 1.555 -1.158 1.948l-6.75 4.27a2.269 2.269 0 0 1 -2.184 0l-6.75 -4.27a2.225 2.225 0 0 1 -1.158 -1.948v-7.285c0 -.809 .443 -1.554 1.158 -1.947l6.75 -3.98a2.33 2.33 0 0 1 2.25 0l6.75 3.98h-.033z" />
+                        <path d="M12 16v.01" />
+                        <path d="M12 13a2 2 0 0 0 .914 -3.782a1.98 1.98 0 0 0 -2.414 .483" />
+                    </svg>
+                </a>
+            </div>
+            <div class="languagesTools" id="UnitConverter">
+                <div class="imgContainer" style="position: relative; margin-top: 30px; margin-left: 60px; margin-right: 60px; height: 160px; display: flex; justify-content: center;user-select: none;">
+                    <img alt="units" src="Libra.png" style=" height: 150px; width: 150px;">
+                </div>
+                <h2>Unit Converter</h2>
+                <h4>Languages & Tools :</h4>
+                <div class="allLangIcon">
+                    <div class="eachIconDiv">
+                        <img src="https://devicon-website.vercel.app/api/html5/original.svg" class="langIcon">
+                        <h5 class="langIconText">HTML</h5>
+                        </img>
+                    </div>
+                    <div class="eachIconDiv">
+                        <img src="https://devicon-website.vercel.app/api/css3/original.svg" class="langIcon">
+                        <h5 class="langIconText">CSS</h5>
+                        </img>
+                    </div>
+                    <div class="eachIconDiv">
+                        <img src="https://devicon-website.vercel.app/api/javascript/original.svg" class="langIcon">
+                        <h5 class="langIconText">JavaScript</h5>
+                        </img>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="card" id="lastCard">
@@ -107,9 +168,42 @@
                         <path d="M4 4l6 6" />
                     </svg>
                 </a>
+                <a onclick="displayTools('GregorianCalendar')">
+                    <svg  xmlns="http://www.w3.org/2000/svg"  width="23"  height="23"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-help-hexagon"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M19.875 6.27c.7 .398 1.13 1.143 1.125 1.948v7.284c0 .809 -.443 1.555 -1.158 1.948l-6.75 4.27a2.269 2.269 0 0 1 -2.184 0l-6.75 -4.27a2.225 2.225 0 0 1 -1.158 -1.948v-7.285c0 -.809 .443 -1.554 1.158 -1.947l6.75 -3.98a2.33 2.33 0 0 1 2.25 0l6.75 3.98h-.033z" />
+                        <path d="M12 16v.01" />
+                        <path d="M12 13a2 2 0 0 0 .914 -3.782a1.98 1.98 0 0 0 -2.414 .483" />
+                    </svg>
+                </a>
+            </div>
+            <div class="languagesTools" id="GregorianCalendar">
+                <div class="imgContainer" style="position: relative; margin-top: 30px; margin-left: 60px; margin-right: 60px; height: 160px; display: flex; justify-content: center;user-select: none;">
+                    <img alt="calendar" src="calendar.png" style=" height: 150px; width: 150px;">
+                </div>
+                <h2>Gregorian Calendar</h2>
+                <h4>Languages & Tools :</h4>
+                <div class="allLangIcon">
+                    <div class="eachIconDiv">
+                        <img src="https://devicon-website.vercel.app/api/html5/original.svg" class="langIcon">
+                        <h5 class="langIconText">HTML</h5>
+                        </img>
+                    </div>
+                    <div class="eachIconDiv">
+                        <img src="https://devicon-website.vercel.app/api/css3/original.svg" class="langIcon">
+                        <h5 class="langIconText">CSS</h5>
+                        </img>
+                    </div>
+                    <div class="eachIconDiv">
+                        <img src="https://devicon-website.vercel.app/api/javascript/original.svg" class="langIcon">
+                        <h5 class="langIconText">JavaScript</h5>
+                        </img>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+    <div id="blackBox">
+    </div>
 </body>
 <script src="script.js"></script>
+<script src="Languages.js"></script>
 </html>
