--- a/index.html
+++ b/index.html
@@ -59,30 +59,6 @@
                     </svg>
                 </a>
             </div>
-            <div class="languagesTools" id="ExpenseTracker">
-                <div class="imgContainer" style="position: relative; margin-top: 30px; margin-left: 60px; margin-right: 60px; height: 160px; display: flex; justify-content: center;user-select: none;">
-                    <img alt="expense" src="expense.png" style=" height: 150px; width: 150px;">
-                </div>
-                <h2>Expense Tracker</h2>
-                <h4>Languages & Tools :</h4>
-                <div class="allLangIcon">
-                    <div class="eachIconDiv">
-                        <img src="https://devicon-website.vercel.app/api/html5/original.svg" class="langIcon">
-                        <h5 class="langIconText">HTML</h5>
-                        </img>
-                    </div>
-                    <div class="eachIconDiv">
-                        <img src="https://devicon-website.vercel.app/api/css3/original.svg" class="langIcon">
-                        <h5 class="langIconText">CSS</h5>
-                        </img>
-                    </div>
-                    <div class="eachIconDiv">
-                        <img src="https://devicon-website.vercel.app/api/javascript/original.svg" class="langIcon">
-                        <h5 class="langIconText">JavaScript</h5>
-                        </img>
-                    </div>
-                </div>
-            </div>
         </div>
         <div class="card">
             <div class="imgContainer">
@@ -116,30 +92,6 @@
                         <path d="M12 13a2 2 0 0 0 .914 -3.782a1.98 1.98 0 0 0 -2.414 .483" />
                     </svg>
                 </a>
-            </div>
-            <div class="languagesTools" id="UnitConverter">
-                <div class="imgContainer" style="position: relative; margin-top: 30px; margin-left: 60px; margin-right: 60px; height: 160px; display: flex; justify-content: center;user-select: none;">
-                    <img alt="units" src="Libra.png" style=" height: 150px; width: 150px;">
-                </div>
-                <h2>Unit Converter</h2>
-                <h4>Languages & Tools :</h4>
-                <div class="allLangIcon">
-                    <div class="eachIconDiv">
-                        <img src="https://devicon-website.vercel.app/api/html5/original.svg" class="langIcon">
-                        <h5 class="langIconText">HTML</h5>
-                        </img>
-                    </div>
-                    <div class="eachIconDiv">
-                        <img src="https://devicon-website.vercel.app/api/css3/original.svg" class="langIcon">
-                        <h5 class="langIconText">CSS</h5>
-                        </img>
-                    </div>
-                    <div class="eachIconDiv">
-                        <img src="https://devicon-website.vercel.app/api/javascript/original.svg" class="langIcon">
-                        <h5 class="langIconText">JavaScript</h5>
-                        </img>
-                    </div>
-                </div>
             </div>
         </div>
         <div class="card" id="lastCard">
@@ -175,33 +127,39 @@
                     </svg>
                 </a>
             </div>
-            <div class="languagesTools" id="GregorianCalendar">
-                <div class="imgContainer" style="position: relative; margin-top: 30px; margin-left: 60px; margin-right: 60px; height: 160px; display: flex; justify-content: center;user-select: none;">
-                    <img alt="calendar" src="calendar.png" style=" height: 150px; width: 150px;">
-                </div>
-                <h2>Gregorian Calendar</h2>
-                <h4>Languages & Tools :</h4>
-                <div class="allLangIcon">
-                    <div class="eachIconDiv">
-                        <img src="https://devicon-website.vercel.app/api/html5/original.svg" class="langIcon">
-                        <h5 class="langIconText">HTML</h5>
-                        </img>
-                    </div>
-                    <div class="eachIconDiv">
-                        <img src="https://devicon-website.vercel.app/api/css3/original.svg" class="langIcon">
-                        <h5 class="langIconText">CSS</h5>
-                        </img>
-                    </div>
-                    <div class="eachIconDiv">
-                        <img src="https://devicon-website.vercel.app/api/javascript/original.svg" class="langIcon">
-                        <h5 class="langIconText">JavaScript</h5>
-                        </img>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
     <div id="blackBox">
+
+    </div>
+    <div class="languagesTools" id="languagesTools">
+        <div id="imgContainer" class="imgContainer" style="position: relative; margin-top: 30px; margin-left: 60px; margin-right: 60px; height: 160px; display: flex; justify-content: center;user-select: none;">
+            <img alt="expense" src="expense.png" style=" height: 150px; width: 150px;">
+        </div>
+        <h2 id="ProjectIdentifier">Expense Tracker</h2>
+        <h4>Languages & Tools :</h4>
+        <div class="allLangIcon" id="langIconContainer">
+
+        </div>
+    </div>
+    <div class="langImagesCollection">
+        <img id="expense" alt="expense" src="expense.png" style=" height: 150px; width: 150px;">
+        <img id="libra" alt="units" src="Libra.png" style=" height: 150px; width: 150px;">
+        <img id="calendar" alt="calendar" src="calendar.png" style=" height: 150px; width: 150px;">
+    </div>
+    <div class="langIconsCollection">
+        <div class="eachIconDiv" id="html">
+            <img alt="html" src="https://devicon-website.vercel.app/api/html5/original.svg" class="langIcon">
+            <h5 class="langIconText">HTML</h5>
+        </div>
+        <div class="eachIconDiv" id="css">
+            <img alt="css" src="https://devicon-website.vercel.app/api/css3/original.svg" class="langIcon">
+            <h5 class="langIconText">CSS</h5>
+        </div>
+        <div class="eachIconDiv" id="JavaScript">
+            <img alt="js" src="https://devicon-website.vercel.app/api/javascript/original.svg" class="langIcon">
+            <h5 class="langIconText">JavaScript</h5>
+        </div>
     </div>
 </body>
 <script src="script.js"></script>
