--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>abhi5455/Projects</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="Languages.css">
+    <link rel="stylesheet" href="LanguagesTools.css">
 </head>
 <body>
     <header class="header" id="header">
@@ -163,5 +163,5 @@
     </div>
 </body>
 <script src="script.js"></script>
-<script src="Languages.js"></script>
+<script src="LanguagesTools.js"></script>
 </html>
