--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             </div>
         </div>
     </div>
-    <div id="blackBox">
+    <div id="blackBox" style="height: 100vh">
 
     </div>
     <div class="languagesTools" id="languagesTools">
