--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
             </div>
         </div>
 
-
         <div class="card">
             <div class="imgContainer">
                 <img alt="Login" src="Img/loginPage.png" style=" height: 240px; width: 240px;">
@@ -101,6 +100,40 @@
             </div>
         </div>
 
+        <div class="card">
+            <div class="imgContainer">
+                <img alt="todo" src="Img/todo.png" style=" height: 240px; width: 240px; border-radius: 50%">
+            </div>
+            <h2>Todo List</h2>
+            <p>A React-based To-Do List app simplifies task management with features for adding, deleting, and marking tasks as complete, all within an intuitive interface and smooth state management.</p>
+            <div class="icons">
+                <a href="https://github.com/abhi5455/Todo-List">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="23" height="23" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
+                    </svg>
+                </a>
+                <a href="https://abhi5455-todo-list.vercel.app/">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrows-maximize" width="23" height="23" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M16 4l4 0l0 4" />
+                        <path d="M14 10l6 -6" />
+                        <path d="M8 20l-4 0l0 -4" />
+                        <path d="M4 20l6 -6" />
+                        <path d="M16 20l4 0l0 -4" />
+                        <path d="M14 14l6 6" />
+                        <path d="M8 4l-4 0l0 4" />
+                        <path d="M4 4l6 6" />
+                    </svg>
+                </a>
+                <a onclick="displayTools('TodoList')">
+                    <svg  xmlns="http://www.w3.org/2000/svg"  width="23"  height="23"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-help-hexagon"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M19.875 6.27c.7 .398 1.13 1.143 1.125 1.948v7.284c0 .809 -.443 1.555 -1.158 1.948l-6.75 4.27a2.269 2.269 0 0 1 -2.184 0l-6.75 -4.27a2.225 2.225 0 0 1 -1.158 -1.948v-7.285c0 -.809 .443 -1.554 1.158 -1.947l6.75 -3.98a2.33 2.33 0 0 1 2.25 0l6.75 3.98h-.033z" />
+                        <path d="M12 16v.01" />
+                        <path d="M12 13a2 2 0 0 0 .914 -3.782a1.98 1.98 0 0 0 -2.414 .483" />
+                    </svg>
+                </a>
+            </div>
+        </div>
 
         <div class="card">
             <div class="imgContainer">
@@ -187,21 +220,26 @@
     <div class="langImagesCollection">
         <img id="expense" alt="expense" src="Img/expense.png" style=" height: 150px; width: 150px;">
         <img id="loginPage" alt="Login" src="Img/loginPage.png" style=" height: 150px; width: 150px;">
+        <img id="todo" alt="expense" src="Img/todo.png" style=" height: 150px; width: 150px;">
         <img id="libra" alt="units" src="Img/Libra.png" style=" height: 150px; width: 150px;">
         <img id="calendar" alt="calendar" src="Img/calendar.png" style=" height: 150px; width: 150px;">
     </div>
     <div class="langIconsCollection">
         <div class="eachIconDiv" id="html">
-            <img alt="html" src="https://devicon-website.vercel.app/api/html5/original.svg" class="langIcon">
+            <img alt="html" src="Icons/html.png" class="langIcon">
             <h5 class="langIconText">HTML</h5>
         </div>
         <div class="eachIconDiv" id="css">
-            <img alt="css" src="https://devicon-website.vercel.app/api/css3/original.svg" class="langIcon">
+            <img alt="css" src="Icons/css.png" class="langIcon">
             <h5 class="langIconText">CSS</h5>
         </div>
         <div class="eachIconDiv" id="JavaScript">
-            <img alt="js" src="https://devicon-website.vercel.app/api/javascript/original.svg" class="langIcon">
+            <img alt="js" src="Icons/js.png" class="langIcon">
             <h5 class="langIconText">JavaScript</h5>
+        </div>
+        <div class="eachIconDiv" id="react">
+            <img alt="react" src="Icons/img.png" class="langIcon">
+            <h5 class="langIconText">React</h5>
         </div>
     </div>
 </body>
