--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header" id="header">
         <h1 id="project">- PROJECTS</h1>
-        <a href="https://github.com/abhi5455">
+        <a target="_blank" href="https://github.com/abhi5455">
             <h3>abhi</h3>
         </a>
         <svg xmlns="http://www.w3.org/2000/svg" id="sun" class="icon icon-tabler icon-tabler-sun" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
